--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.hibernate.ddl-auto =update
 spring.jpa.properties.hibernate.show_sql=true
 
 spring.data.rest.detection-strategy=annotated
+
+# eddf 
